moved functionality to html; added about with images

--- a/cntrl.html
+++ b/cntrl.html
@@ -1,3 +1,5 @@
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>WiFi Smartphone Holder</title></head>
+<body><a href=\ctrl.html><button>Control</button></a><a href=\set.html><button>Settings</button></a><a href=\status.html><button>Status</button></a>
 <style type="text/css"> button{font-size: 200%;} </style>
 <h1>Control</h1><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href=ctrl?pin=ON1><button>&nbsp;&nbsp;&uarr;&nbsp;&nbsp;</button></a></p>
 <p><a href=ctrl?pin=ON2><button>&nbsp;&larr;&nbsp;</button></a>&nbsp;&nbsp;<a href=ctrl?pin=OFF2><button>&nbsp;&rarr;&nbsp;</button></a></p>
