--- a/notallowed.html
+++ b/notallowed.html
@@ -1,5 +1,3 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>WiFi Smartphone Holder</title></head><body>
 <a href=\ctrl.html><button>Control</button></a><a href=\set.html><button>Settings</button></a><a href=\status.html><button>Status</button></a>
-<h2>Client settings stored successfully!</h2><h2>Reset device to start with new configuration.</h2>
-<br><button onClick="reset()">Reset</button>
-<script>function reset(){window.location="/reset.html";}</script></body></html>
+<h2 style="color:red;">Functionality not available in Client mode</h2></body></html>
